latte/tests/bad/type/stmt/assign.lat
int main() {
  int a = "asd";
  return 0;
}
